--- a/carrosel/style.css
+++ b/carrosel/style.css
@@ -7,3 +7,66 @@
 html {
   font-size: 62.5%;
 }
+
+.carrosel {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 50%;
+
+  & .container {
+    display: inherit;
+    overflow-x: scroll;
+  }
+  & .imagens {
+    display: inherit;
+    gap: 1rem;
+    width: max-content;
+    max-width: 125rem;
+    & .imagem {
+      position: relative;
+      cursor: pointer;
+
+      &.ativo::after {
+        background-color: transparent;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #ffffff50;
+      }
+    }
+  }
+  & .setas {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 4rem;
+    font-weight: 600;
+    color: #ffffffff;
+    background-color: #303030;
+    border: solid;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 5rem;
+    cursor: pointer;
+    z-index: 1;
+
+    &.direita {
+      right: 15%;
+    }
+
+    &.esquerda {
+      left: 15%;
+    }
+  }
+}
